Fixed problem with progress bar not showing

--- a/pages/achievement/achipage.css
+++ b/pages/achievement/achipage.css
@@ -7,6 +7,10 @@
     background-attachment: fixed; 
 }
 
+.progress-container {
+    z-index: 1;
+}
+
 .header {
     z-index: 1;
 }
