--- a/pages/contact/contactpage.css
+++ b/pages/contact/contactpage.css
@@ -2,6 +2,10 @@
     z-index: 1;
 }
 
+.progress-container {
+    z-index: 1;
+}
+
 .contactMain {
     background-image: url('/media/otherImgs/coolImgThingy.jpeg');
     display: inline-block;
